<resources>
    <string name="app_name">Dandy</string>
    <string name="followers">Followers: %1$s</string>
    <string name="favorite">Favorite</string>
    <string name="various_genres">Various Genres</string>
    <string name="albums">Albums</string>
    <string name="search">Search</string>
    <string name="options">Options</string>
    <string name="songs">Songs</string>
    <string name="songs_for_you">Songs for you</string>
    <string name="artists_for_you">Artists for you</string>
    <string name="similar">Similar</string>
    <string name="log_in">Log in</string>
    <string name="app_description">Dandy is a non comercial Spotify client with some adjustments. In order to use it you must have a premium Spotify account. Every change you make on Dandy affects your Spotify account.</string>
    <string name="meet_dandy">Meet Dandy</string>
    <string name="Likes">Likes</string>
    <string name="logging_in">Logging in</string>
    <string name="likes">Likes</string>
    <string name="playlists">Playlists</string>
    <string name="home">Home</string>
</resources>
